--- a/Chropyne2023.html
+++ b/Chropyne2023.html
@@ -32,19 +32,17 @@
                         <li class="sub-dropdown">
                             <a href="#">2024 &#x25B6;</a>
                             <ul class="sub-dropdown-content">
-                                <li><a href="2024_jaro.html">Jaro</a></li>
-                                <li><a href="2024_leto.html">Léto</a></li>
-                                <li><a href="2024_podzim.html">Podzim</a></li>
-                                <li><a href="2024_zima.html">Zima</a></li>
+                                <li><a href="Treninky_2024.html">Tréninky</a></li>
+                                <li><a href="Cimburk2024.html">Cimburk</a></li>
+                                <li><a href="Navsi2024.html">Návsí</a></li>
+                                <li><a href="Chropyne2024.html">Chropyně</a></li>
+                                <li><a href="Tovacov2024.html">Tovačov</a></li>
                             </ul>
                         </li>
                         <li class="sub-dropdown">
                             <a href="#">2025 &#x25B6;</a>
                             <ul class="sub-dropdown-content">
-                                <li><a href="2025_jaro.html">Jaro</a></li>
-                                <li><a href="2025_leto.html">Léto</a></li>
-                                <li><a href="2025_podzim.html">Podzim</a></li>
-                                <li><a href="2025_zima.html">Zima</a></li>
+
                             </ul>
                         </li>
                     </ul>
